@@ -108,7 +108,7 @@ public class Manifest {
             List<Library> deps = platform.libraries.stream().filter(library ->
                 library.getModules() == null ||
                         Arrays.stream(library.getModules()).anyMatch(moduleName::equals)
-            ).collect(Collectors.toList());
+            ).toList();
             // If not return any
             if (!deps.isEmpty()) {
                 return platform.target;
